# agentic-sre-responder

./: .gitignore  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  README.md  pyproject.toml  setup.md
app/: __init__.py  logging_config.py  main.py  models.py  orchestrator.py  results.py  store.py
app/agents/: __init__.py  deploy_investigator.py  k8s_investigator.py  remediation_advisor.py  triage.py
app/integrations/: __init__.py  slack.py
app/providers/: base.py  bedrock_provider.py  mock_provider.py  openai_provider.py
demo-apps/app-a/: app.py
demo-apps/app-b/: Dockerfile  app.py
docs/: demo_script.md  demo_setup.md
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  rbac-readonly.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  ui-deployment.yaml  ui-service.yaml
k8s/demo/: app-a.yaml  app-b.yaml  namespaces.yaml  rbac-demo-attacker.yaml
tests/: conftest.py  test_api.py  test_orchestrator.py  test_providers.py  test_store.py
ui/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  api.js  main.jsx
ui/src/components/: Charts.jsx  EvidenceList.jsx  Recommendations.jsx  Timeline.jsx
ui/src/pages/: IncidentDetail.jsx  Incidents.jsx
ui/src/styles/: index.css
