[project]
name = "agentic-sre-responder"
version = "0.1.0"
description = "MVP to demonstrate AI agents reducing MTTR for Kubernetes incidents"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "redis>=5.0.0",
  "aiosqlite>=0.19.0",
  "kubernetes>=30.0.0",
  "httpx>=0.27.0",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
